--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,15 @@
     <string name="platform">Platform: %s</string>
     <string name="overview">Overview</string>
     <string name="genres_title">Genres</string>
-    <string name="rating">Rating: %d</string>
+    <string name="rating">Rating: %s</string>
     <string name="review_count">Review Count: %d</string>
     <string name="platform_title">Supported System</string>
     <string name="developer_title">Developer</string>
     <string name="released_date_title">Released date</string>
     <string name="screenshots_title">Screenshots</string>
     <string name="trailer_title">Trailer</string>
+    <string name="library">Library</string>
+    <string name="home">Home</string>
+    <string name="age_rating_title">Age Rating</string>
+    <string name="tags_title">Tags</string>
 </resources>
