--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,6 @@
     <string name="loading">Loading...</string>
     <string name="refresh">refresh</string>
     <string name="add_to_library">Add to Library</string>
-    <string name="added_to_library">Added to Library</string>
+    <string name="added_to_library">Added</string>
 
 </resources>
